src/test/ui/extern/issue-36122-accessing-externed-dst.rs
fn main() {
    extern {
        static symbol: [usize]; //~ ERROR: the size for values of type
    }
    println!("{}", symbol[0]);
}
